siduxcc (0.6.8) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 05 Nov 2007 01:26:59 +0100

siduxcc (0.6.7) unstable; urgency=low

  * siduxcc icon changed 

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 04 Nov 2007 17:26:19 -0500

siduxcc (0.6.6) unstable; urgency=low

  * typos fixed
  * siduxcc-kde: start: menulock added
  * siduxcc icon changed

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 04 Nov 2007 16:45:05 -0500

siduxcc (0.6.5) unstable; urgency=low

  [ Fabian Wuertz ]
  * siduxcc-hermes: ugradable packages problem fixed
  * siduxcc-kde: network: netcardconfig functions included
  * siduxcc-hermes: ugradable packages problem fixed again 

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 01 Nov 2007 17:45:46 -0400

siduxcc (0.6.4) unstable; urgency=low

  * fix URL to sidux.com.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 28 Oct 2007 16:08:16 +0100

siduxcc (0.6.3) unstable; urgency=low

  * new naming for the x.org backupfile in accord with sidux-binary-gfx and change-res

 -- Fabian Wuertz <xadras@sidux.com>  Sat, 27 Oct 2007 02:08:06 +0200

siduxcc (0.6.2) unstable; urgency=low

  * de-typos fixed
  * icons: Makefile.am fixed
  * kernel: load problem solved
  * uint problem solved
  * kernel: currentKernelTextLabel & messageTextLabel added
  * de-typos fixed
  * siduxcc: software: -y option removed by apt-show-versions install
  * display: colorDepthComboBox for fglrx users disabled

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 26 Oct 2007 17:41:30 +0200

siduxcc (0.6.1) unstable; urgency=low

  * po: languages files fixed
  * po: some small fixes
  * common folder removed
  * typo 

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 26 Oct 2007 00:22:47 +0200

siduxcc (0.6.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * siduxcc: display: gfx-function added
  * siduxcc: software: clean-function added
  * KCONTROL-UIS --> KDE-UI

  [ Stefan Lippers-Hollmann ]
  * remove execautable bit from simple images.